[gd_scene load_steps=30 format=3 uid="uid://bt1y3lg6l6v10"]

[ext_resource type="Script" path="res://Scene/orb_progress.gd" id="1_kkqhj"]
[ext_resource type="PackedScene" uid="uid://bfohruf3hh4m1" path="res://Scene/Ball.tscn" id="2_s2tgu"]
[ext_resource type="AudioStream" uid="uid://b24022tesnoiy" path="res://Music/Sfx/hitHurt(2).wav" id="3_85hj4"]
[ext_resource type="PackedScene" uid="uid://b17gf1xmpfypy" path="res://Scene/progress_bar.tscn" id="4_6yif4"]
[ext_resource type="Texture2D" uid="uid://bmnkm06iijwwa" path="res://art/Postcard_BG.png" id="5_w7yx8"]
[ext_resource type="Texture2D" uid="uid://c15kaabpvytvj" path="res://art/TentacleBG.png" id="6_g0rwu"]
[ext_resource type="PackedScene" uid="uid://mcotvidp7t1p" path="res://Scene/FlipperLeftObj.tscn" id="7_4biyo"]
[ext_resource type="PackedScene" uid="uid://dbj34bp2kj4q7" path="res://Scene/FlipperRightObj.tscn" id="8_lbwe8"]
[ext_resource type="Texture2D" uid="uid://oivahydjj28j" path="res://octopus_pixel.png" id="9_3pndc"]
[ext_resource type="PackedScene" uid="uid://dkwd1j4g02x7e" path="res://Scene/bumper.tscn" id="10_07eg4"]
[ext_resource type="Script" path="res://Skript/camera_2d.gd" id="11_tcibl"]
[ext_resource type="Script" path="res://Scene/user_interface.gd" id="12_nq01h"]
[ext_resource type="FontFile" uid="uid://drenqvy884xs8" path="res://FONT/jmh-cthulhumbus-arcade.cthulhumbusarcadeugalt2-regu.ttf" id="13_c1h1e"]

[sub_resource type="AudioStreamWAV" id="AudioStreamWAV_47srj"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_p76uy"]
friction = 0.0
bounce = 0.6

[sub_resource type="SegmentShape2D" id="SegmentShape2D_xvkjf"]
a = Vector2(45, -9)
b = Vector2(13, 36)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_xumyx"]
a = Vector2(110, -5)
b = Vector2(141, 40)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_b7pf8"]
a = Vector2(13, 34)
b = Vector2(14, 71)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_owx42"]
a = Vector2(14, 69)
b = Vector2(20, 114)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_rsa0g"]
a = Vector2(20, 113)
b = Vector2(14, 151)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_puvd8"]
a = Vector2(14, 150)
b = Vector2(21, 171)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_8yyfl"]
a = Vector2(36, 178)
b = Vector2(21, 171)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_8c6og"]
a = Vector2(111, -8)
b = Vector2(45, -8)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_hfuyx"]
a = Vector2(139, 67)
b = Vector2(139, 38)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_0wpck"]
a = Vector2(133, 111)
b = Vector2(138, 67)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_edg2f"]
a = Vector2(132, 110)
b = Vector2(139, 150)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_vemsk"]
a = Vector2(132, 172)
b = Vector2(139, 148)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_hhiej"]
a = Vector2(115, 178)
b = Vector2(131, 172)

[sub_resource type="Theme" id="Theme_aerfv"]
default_font = ExtResource("13_c1h1e")

[node name="FirstLevel" type="Node2D"]
position = Vector2(0, -3)
script = ExtResource("1_kkqhj")
ball_scene = ExtResource("2_s2tgu")
spawn_position = Vector2(180, 100)
total_orbs = 3

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(192, 110)
stream = ExtResource("3_85hj4")

[node name="Music" type="AudioStreamPlayer2D" parent="."]
position = Vector2(192, 110)
stream = SubResource("AudioStreamWAV_47srj")

[node name="ProgressBar" parent="." instance=ExtResource("4_6yif4")]
offset_left = 279.0
offset_top = 15.0
offset_right = 379.0
offset_bottom = 25.0
max_value = 3.0
value = 1.0
metadata/_edit_use_anchors_ = true

[node name="BG" type="Sprite2D" parent="."]
modulate = Color(0.726732, 0.726732, 0.726732, 1)
z_index = -3
position = Vector2(-5.36, -3.97)
scale = Vector2(1.1, 1.1)
texture = ExtResource("5_w7yx8")
centered = false
metadata/_edit_lock_ = true

[node name="Level BG" type="Sprite2D" parent="."]
z_index = -2
position = Vector2(128, 5)
texture = ExtResource("6_g0rwu")
centered = false
metadata/_edit_lock_ = true

[node name="LeftFlipper" parent="." instance=ExtResource("7_4biyo")]
position = Vector2(152, 192)
rotation = 0.174533

[node name="RightFlipper" parent="." instance=ExtResource("8_lbwe8")]
position = Vector2(234, 193)
rotation = -0.174533

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(192, 17)
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_3pndc")

[node name="Boundaries" type="Node" parent="."]

[node name="Boundaries2" type="StaticBody2D" parent="Boundaries"]
position = Vector2(0, -1)
physics_material_override = SubResource("PhysicsMaterial_p76uy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/Boundaries2"]
position = Vector2(116, 35)
shape = SubResource("SegmentShape2D_xvkjf")

[node name="Boundaries3" type="StaticBody2D" parent="Boundaries"]
position = Vector2(0, -1)
physics_material_override = SubResource("PhysicsMaterial_p76uy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/Boundaries3"]
position = Vector2(115, 32)
shape = SubResource("SegmentShape2D_xumyx")

[node name="Boundaries4" type="StaticBody2D" parent="Boundaries"]
position = Vector2(0, -1)
physics_material_override = SubResource("PhysicsMaterial_p76uy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/Boundaries4"]
position = Vector2(116, 35)
shape = SubResource("SegmentShape2D_b7pf8")

[node name="Boundaries5" type="StaticBody2D" parent="Boundaries"]
position = Vector2(0, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/Boundaries5"]
position = Vector2(116, 35)
shape = SubResource("SegmentShape2D_owx42")

[node name="Boundaries6" type="StaticBody2D" parent="Boundaries"]
position = Vector2(0, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/Boundaries6"]
position = Vector2(116, 35)
shape = SubResource("SegmentShape2D_rsa0g")

[node name="Boundaries7" type="StaticBody2D" parent="Boundaries"]
position = Vector2(0, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/Boundaries7"]
position = Vector2(116, 35)
shape = SubResource("SegmentShape2D_puvd8")

[node name="Boundaries8" type="StaticBody2D" parent="Boundaries"]
position = Vector2(0, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/Boundaries8"]
position = Vector2(116, 35)
shape = SubResource("SegmentShape2D_8yyfl")

[node name="Boundaries9" type="StaticBody2D" parent="Boundaries"]
position = Vector2(0, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/Boundaries9"]
position = Vector2(116, 35)
shape = SubResource("SegmentShape2D_8c6og")

[node name="Boundaries10" type="StaticBody2D" parent="Boundaries"]
position = Vector2(0, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/Boundaries10"]
position = Vector2(116, 35)
shape = SubResource("SegmentShape2D_hfuyx")

[node name="Boundaries11" type="StaticBody2D" parent="Boundaries"]
position = Vector2(0, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/Boundaries11"]
position = Vector2(116, 35)
shape = SubResource("SegmentShape2D_0wpck")

[node name="Boundaries12" type="StaticBody2D" parent="Boundaries"]
position = Vector2(0, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/Boundaries12"]
position = Vector2(116, 35)
shape = SubResource("SegmentShape2D_edg2f")

[node name="Boundaries13" type="StaticBody2D" parent="Boundaries"]
position = Vector2(0, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/Boundaries13"]
position = Vector2(116, 35)
shape = SubResource("SegmentShape2D_vemsk")

[node name="Boundaries14" type="StaticBody2D" parent="Boundaries"]
position = Vector2(0, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/Boundaries14"]
position = Vector2(116, 35)
shape = SubResource("SegmentShape2D_hhiej")

[node name="Bouncer" type="Node" parent="."]

[node name="Bumper" parent="Bouncer" instance=ExtResource("10_07eg4")]
position = Vector2(150, 68)
scale = Vector2(0.2, 0.2)

[node name="Bumper2" parent="Bouncer" instance=ExtResource("10_07eg4")]
position = Vector2(139, 146)
scale = Vector2(0.2, 0.2)

[node name="Bumper3" parent="Bouncer" instance=ExtResource("10_07eg4")]
position = Vector2(245, 146)
scale = Vector2(0.2, 0.2)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(192, 110)
script = ExtResource("11_tcibl")

[node name="Button Spawn" type="Button" parent="."]
unique_name_in_owner = true
offset_left = 294.0
offset_top = 39.0
offset_right = 354.0
offset_bottom = 70.0
text = "Spawn"

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 19.0
offset_top = 3.0
offset_right = 59.0
offset_bottom = 43.0
scale = Vector2(0.697308, 0.735628)
script = ExtResource("12_nq01h")
metadata/_edit_use_anchors_ = true

[node name="ScoreLabel" type="Label" parent="UserInterface"]
layout_mode = 0
offset_left = 357.0
offset_top = 120.0
offset_right = 425.0
offset_bottom = 143.0
scale = Vector2(1.8776, 2.34367)
theme = SubResource("Theme_aerfv")
text = "Score: 0"
metadata/_edit_use_anchors_ = true

[connection signal="button_down" from="Button Spawn" to="." method="_on_button_spawn_button_down"]
[connection signal="button_up" from="Button Spawn" to="." method="_on_button_spawn_button_up"]
